express/code/blocks/faqv2/faqv2.css
.faqv2 {
  --color-light-grey: #717171;
  position: relative;
  height: auto;
}

.faqv2-wrapper {
  margin: 0 auto var(--spacing-80) auto;
  border-radius: var(--spacing-100);
  background: var(--color-white);
}

.faqv2.expandable.longform .faqv2-wrapper {
  margin-bottom: 0;
  border-radius: 0;
  position: relative;
  background-color: rgba(255, 255, 255, 0.6);
}

.faqv2.expandable.longform .faqv2-wrapper .faqv2-toggle {
  padding-left: var(--spacing-400);
}

.faqv2.expandable .faqv2-wrapper {
  margin: var(--spacing-300) auto var(--spacing-80) auto;
  box-shadow: 0px 1px 6px 0px rgba(0, 0, 0, 0.12);
  position: relative;
}

.faqv2.expandable:not(.longform) .faqv2-wrapper::before {
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  width: 5px;
  height: 100%;
  background: linear-gradient(180deg, #FF4885 0.58%, #FC7D00 99.99%), linear-gradient(180deg, #D600C4 20%, #4B2BEE 100%);
  border-radius: 8px 0 0 8px;
}

.faqv2 .has-background picture img {
  opacity: 1;
}

.faqv2-accordion {
  height: 128px;
  margin-bottom: var(--spacing-75);
  border-radius: var(--spacing-0) var(--spacing-100) var(--spacing-100) var(--spacing-0);
  border-left: var(--spacing-75) solid var(--color-info-accent-hover);
  background: var(--color-gray-100);
  padding: var(--spacing-300);
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.faqv2.expandable.longform .faqv2-content {
  overflow: hidden;
  transition: max-height 300ms ease-out;
  margin-top: 0;
  padding-right: var(--spacing-500);
  max-height: 0;
}

.faqv2.expandable.longform .faqv2-content.open {
  margin-top: 0;
  padding-right: var(--spacing-500);
  padding-bottom: var(--spacing-500);
  line-height: 130%;

}

.faqv2.bold {
  width: 97%;
}

.faqv2 .faqv2-accordion {
  margin: 0 var(--spacing-300) var(--spacing-100);
  height: 40px;
  background: var(--color-white);
}

.faqv2.faqv2.expandable .faqv2-accordion {
  margin-right: 0;
}

.faqv2.expandable .faqv2-accordion {
  margin-left: unset;
}

.faqv2-header {
  font-size: var(--body-font-size-m);
  font-style: normal;
  font-weight: 400;
  line-height: var(--spacing-400);
  text-align: left;
  padding-left: var(--spacing-300);
  color: var(--color-light-grey);
}


.faqv2-header:focus-visible {
  outline: var(--border-width-2) solid var(--color-info-accent);
  outline-offset: var(--border-width-2);
  border-radius: var(--spacing-75);
}

.faqv2.expandable .faqv2-toggle:has(.faqv2-content.open) .faqv2-header:focus-visible {
  outline: none;
}

.faqv2.expandable .faqv2-toggle:has(.faqv2-content.open):focus-visible,
.faqv2.expandable .faqv2-toggle:has(.faqv2-content.open):has(.faqv2-header:focus-visible) {
  outline: var(--border-width-2) solid var(--color-info-accent);
  outline-offset: 3px;
  border-radius: var(--spacing-75);
}

.faqv2.bold .faqv2-header {
  font-size: var(--heading-font-size-xs);
  font-weight: var(--heading-font-weight-extra);
  padding-left: var(--spacing-100);
  color: var(--color-light-grey)
}

.faqv2.bold .faqv2-accordion {
  height: 88px;
  background-color: var(--color-white);
}

.faqv2-sub-header {
  margin-top: var(--spacing-100);
  font-size: var(--body-font-size-s);
  font-style: normal;
  font-weight: var(--subheading-font-weight);
  line-height: var(--spacing-400);
  text-align: left;
  padding-left: var(--spacing-300);
  color: var(--color-dark-gray);
}

.faqv2 .faqv2-toggle-btn {
  display: block;
  width: fit-content;
  margin: var(--spacing-300) 0 0 var(--spacing-300);
  text-align: left;
  text-decoration: none;
  border-radius: var(--spacing-325);
  padding: 5px 1.2em var(--spacing-80) 1.2em;
  font-size: var(--body-font-size-s);
  font-weight: 600;
  line-height: var(--body-line-height);
  cursor: pointer;
  transition: background-color 0.3s, color 0.3s, border 0.3s;
  border: var(--border-width-2) solid;
  overflow: hidden;
  text-overflow: ellipsis;
  color: var(--color-white);
  background-color: var(--color-info-accent);
  border-color: var(--color-info-accent);
}

.faqv2 .faqv2-toggle-btn:focus-visible {
  outline: var(--border-width-2) solid var(--color-white);
  outline-offset: var(--border-width-2);
}

.section.has-background {
  padding: var(--spacing-600) var(--spacing-400);
}

.section.has-background:has(.faqv2.expandable) {
  background: linear-gradient(to bottom, white 0%, transparent 20%);
}

.section:has(.faqv2.expandable) picture.section-background {
  height: 100%;
  opacity: 0.5;
}

.faqv2.expandable.longform .faqv2-accordions-col .faqv2-wrapper:first-child {
  border-radius: 16px 16px 0 0;
  box-shadow: 
  0 -2px 5px -2px rgba(0, 0, 0, 0.1),
 -2px 0 5px -2px rgba(0, 0, 0, 0.1),
  2px 0 5px -2px rgba(0, 0, 0, 0.1);
}

.faqv2.expandable.longform .faqv2-accordions-col .faqv2-wrapper {
  margin-top: 0;
  box-shadow: 
  -2px 0 5px -2px rgba(0, 0, 0, 0.1),
   2px 0 5px -2px rgba(0, 0, 0, 0.1);
}

.faqv2.expandable.longform .faqv2-accordions-col .faqv2-wrapper:last-child {
  border-radius: 0 0 16px 16px;
  box-shadow: 0 4px 10px -4px rgba(0, 0, 0, 0.2);
}

.faqv2.expandable.longform .faqv2-wrapper:not(:last-child)::after {
  content: '';
  position: absolute;
  bottom: 0;
  width: calc(100% - 48px);
  left: 24px;
  border-bottom: 1px solid #8F8F8F;
}

.faqv2-accordion.expandable.header-accordion {
  height: 100%;
  border-radius: 8px;
  border: none;
  margin-bottom: 0;
  background: var(--color-white);
  position: relative;
  transition: all 0.3s ease;
  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
}

.faqv2-accordion.expandable.header-accordion::before {
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  width: 5px;
  height: 100%;
  background: linear-gradient(to bottom, #FF4885, #EC5153, #F2693C);
  opacity: 0;
  transition: opacity 0.3s ease;
  z-index: 1;
  border-radius: 8px 0 0 8px;
  pointer-events: none;
}
/* ... */

